link to github, copyright

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<script type="text/javascript" src="./viewModel.js"></script>
 	</head>
 	<body>
+		<a href="https://github.com/JediMindtrick/Analytics-DSL">License & Github repo</a><br />
+		Copyright &copy; 2013 by Brandon Wilhite
 		<h1>Analytics DSL Editor</h1>
 		<table>
 		    <thead>
@@ -26,6 +28,7 @@
 			<button data-bind="click: loadProgram">Load Program</button>
 			<textarea style="width:100%; height:100%;"  data-bind="value: programCode" ></textarea>
 		</div>
+		
 	</body>
 
 		<script type="text/javascript">
