--- a/web/index.html
+++ b/web/index.html
@@ -10,12 +10,13 @@
 		<a href="https://github.com/JediMindtrick/Analytics-DSL">License & Github repo</a><br />
 		Copyright &copy; 2013 by Brandon Wilhite
 		<h1>Analytics DSL Editor</h1>
+		<input style="width:100%;" data-bind="enable: false, value: currentError" />
 		<table>
 		    <thead>
 		        <tr><th>Name</th><th>Value</th><th>Input</th><th>Result</th><th></th></tr>
 		    </thead>
 		    <tbody data-bind="foreach: rows">
-		        <tr data-bind="css: { error: IsError }">
+		        <tr data-bind="css: { error: IsError }, event: { mouseover: setCurrentError }">
 		            <td><input type="text" data-bind="value: Name" /></td>
 		            <td><textarea data-bind="value: Value"></textarea></td>
    		            <td><input data-bind="value: Input, disable: !$data.isInput()" /></td>
