--- a/web/index.html
+++ b/web/index.html
@@ -16,12 +16,12 @@
 		        <tr><th>Name</th><th>Value</th><th>Input</th><th>Result</th><th></th></tr>
 		    </thead>
 		    <tbody data-bind="foreach: rows">
-		        <tr data-bind="css: { error: IsError }, event: { mouseover: setCurrentError }">
-		            <td><input type="text" data-bind="value: Name" /></td>
-		            <td><textarea data-bind="value: Value"></textarea></td>
-   		            <td><input data-bind="value: Input, disable: !$data.isInput()" /></td>
-		            <td><input type="text" data-bind="value: Result, disable: true" /></td>
-		            <td><button data-bind="click: $root.removeRow">Remove</button></td>
+		        <tr data-bind="css: { error: IsError }, event: { mouseover: setCurrentError}">
+		            <td><input type="text" data-bind="value: Name, event: {focus: setCurrentError}" /></td>
+		            <td><textarea data-bind="value: Value, event: {focus: setCurrentError}"></textarea></td>
+   		            <td><input data-bind="value: Input, disable: !$data.isInput(), event: {focus: setCurrentError}" /></td>
+		            <td><input type="text" data-bind="value: Result, disable: true, event: {focus: setCurrentError}" /></td>
+		            <td><button data-bind="click: $root.removeRow, event: {focus: setCurrentError}">Remove</button></td>
 		        </tr>
 		    </tbody>
 		</table>
