--- a/web/index.html
+++ b/web/index.html
@@ -4,28 +4,56 @@
 		<link rel="stylesheet" type="text/css" href="./adl.css">
 		<script type="text/javascript" src="./knockout.js"></script>
 		<script type="text/javascript" src="./app.js"></script>
+		<script type="text/javascript" src="./cellNav.js"></script>
 		<script type="text/javascript" src="./viewModel.js"></script>
+		<script type="text/javascript" src="./shortcut.js"></script>
+		<script type="text/javascript" src="./jquery-2.0.0.min.js"></script>
 	</head>
 	<body>
 		<a href="https://github.com/JediMindtrick/Analytics-DSL">License & Github repo</a><br />
 		Copyright &copy; 2013 by Brandon Wilhite
 		<h1>Analytics DSL Editor</h1>
 		<input style="width:100%;" data-bind="enable: false, value: currentError" />
-		<table>
-		    <thead>
-		        <tr><th>Name</th><th>Value</th><th>Input</th><th>Result</th><th></th></tr>
-		    </thead>
-		    <tbody data-bind="foreach: rows">
-		        <tr data-bind="css: { error: IsError }, event: { mouseover: setCurrentError}">
-		            <td><input type="text" data-bind="value: Name, event: {focus: setCurrentError}" /></td>
-		            <td><textarea data-bind="value: Value, event: {focus: setCurrentError}"></textarea></td>
-   		            <td><input data-bind="value: Input, disable: !$data.isInput(), event: {focus: setCurrentError}" /></td>
-		            <td><input type="text" data-bind="value: Result, disable: true, event: {focus: setCurrentError}" /></td>
-		            <td><button data-bind="click: $root.removeRow, event: {focus: setCurrentError}">Remove</button></td>
-		        </tr>
-		    </tbody>
-		</table>
-		<button data-bind="click: addRow">Add Row</button><br />
+	
+<table class="tableone" style="height:500px;">
+    <thead>
+        <tr>
+            <th style="width:176px;">Name</th>
+            <th style="width:176px;">Value</th>
+            <th style="width:176px;">Input</th>
+            <th style="width:176px;">Result</th>
+        </tr>
+    </thead>
+    <tbody>
+	    <tr><td colspan="4" style="padding-top:0;">
+	        <div class="innerb">
+	            <table class="tabletwo">   
+	            	<thead></thead>                   
+	                <tbody data-bind="foreach: rows" >
+	                    <tr data-bind="attr: { id: 'Row_' + Id }, css: { error: IsError }, event: { mouseover: setCurrentError}">
+	                        <td class="tdFIX"><!--td width bug fix: input width overrides fixed width here. -->
+	                            <input name="Name" type="text" data-bind="value: Name, event: {focus: setCurrentError}" /></td>
+	                        <td class="tdFIX">
+	                        	<textarea name="Value" data-bind="value: Value, event: {focus: setCurrentError}"></textarea>
+	                            </td>
+	                        <td class="tdFIX">
+	                        	<input name="Input" data-bind="value: Input, disable: !$data.isInput(), event: {focus: setCurrentError}" />
+	                            </td>
+	                        <td class="tdFIX">
+	                        	<input name="Result" type="text" data-bind="value: Result, disable: true, event: {focus: setCurrentError}" />
+	                        </td>
+	                    </tr>
+	                </tbody>
+	            </table>
+	        </div>
+	    </td></tr>
+	</tbody>
+</table>
+
+
+
+
+
 		<div style="width: 75%; height: 400px; margin-top: 50px;">
 			<button data-bind="click: loadProgram">Load Program</button>
 			<textarea style="width:100%; height:100%;"  data-bind="value: programCode" ></textarea>
