--- a/web/index.html
+++ b/web/index.html
@@ -55,12 +55,8 @@
 	</tbody>
 </table>
 
-
-
-
-
 		<div style="width: 75%; height: 400px; margin-top: 50px;">
-			<textarea style="width:100%; height:100%;"  data-bind="value: programCode" ></textarea>
+			<textarea style="width:100%; height:100%;"  data-bind="value: programCode, enable: currentProgramName() === 'Load From Text'" ></textarea>
 		</div>
 		
 	</body>
