--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
 		</div>
 
 		<label>Errors & Messages:</label>
-		<input style="width:100%;" data-bind="enable: false, value: currentError" />
+		<input id="currentError" style="width:100%;" data-bind="enable: false, value: currentError" />
 		<br>
 		<br>
 
@@ -109,7 +109,6 @@
 			</div>
 		</div>
 
-
 	</body>
 
 		<script type="text/javascript">
@@ -123,7 +122,7 @@ binding was broken by codemirror
 			ko.bindingHandlers.codemirror = {
 
 			    init: function(element, valueAccessor, allBindingsAccessor, viewModel) {
-			    	
+
 			        var editor = CodeMirror.fromTextArea(element, options);
 			        element.editor = editor;
 			        editor.setValue(allBindingsAccessor().value());
@@ -138,10 +137,14 @@ binding was broken by codemirror
 
 			        	allBindingsAccessor().hasFocus.subscribe(function(newValue) {
 							if(newValue){
-								editor.focus();
 								editor.isEditing = true;
+								editor.options.readOnly = false;
+								editor.focus();
+
 							}else{
 								editor.isEditing = false;
+								editor.options.readOnly = "nocursor";
+								$(editor.display.wrapper).removeClass('CodeMirror-focused');
 							}
 						});
 			        }
